--- a/index.html
+++ b/index.html
@@ -106,8 +106,11 @@
 
     <div class="cart1">
         <h1 style="text-align: center;">Order Summary</h1>
+
+        <div>   
+
         <ul>
-            <li>Main Item 1
+            <li>Main Item 1 <p>----------------</p> <p id="itemPrice">$6.98</p>
 
                 <ul>
                     <li> Ingredient 1 </li>
@@ -128,7 +131,8 @@
 
             </li><br>
 
-            <li>Main Item 2
+            <li>Main Item 2<p>----------------</p> <p id="itemPrice">$6.98</p>
+
 
                 <ul>
                     <li> Ingredient 1 </li>
@@ -149,7 +153,8 @@
 
             </li><br>
 
-            <li>Main Item 3
+            <li>Main Item 3<p>----------------</p> <p id="itemPrice">$6.98</p>
+
 
                 <ul>
                     <li> Ingredient 1 </li>
@@ -176,6 +181,7 @@
         </ul>
 
 
+    </div>
 
 
 
@@ -239,11 +245,18 @@
  
     </div>
 
+
+
     <div class = "footerCart">
         <button class = "cancelButton" onclick="document.getElementById('cart').style.display='none';">Cancel</button>
         <button class = "acceptButton" onclick="document.getElementById('cart').style.display='none';">Process Payment</button>
     </div>
+
+
+
+
 </div>
+
 
 
 <!--LOGIN PAGE. PLEASE ASK ANIKET ABOUT HIS DUPLICATE ID'S SO THAT WE CAN FIX ERRORS-->
