--- a/index.html
+++ b/index.html
@@ -363,6 +363,9 @@
             hidePopUp();
             //document.getElementById("foodPopup").style.display = "none";
         }
+        if(event.target.classList.contains("checkItem")){
+            event.target.checked = !event.target.checked;
+        }
     }
 </script>
 
