--- a/index.html
+++ b/index.html
@@ -209,12 +209,13 @@
 
 
 
-        <label for="Payment Method">Payment<br></label>
-        <input type="text" id="ccNumber" name="ccNumber" placeholder="Credit Card Number" required><br>
-        <input type="text" id="ccNumber" name="cvcCode" placeholder="CVC" required><br>
+    <label for="Payment Method"><pre>Payment Method</pre></label>
+        <input type="text" style="margin-left: 75px;" id="ccNumber" name="ccNumber" placeholder="Credit Card Number" required>
 
-        <label for="expiryMonth"><pre>Expiry: Month   Year</pre></label>
-        <select style="margin-left: 60px;" name="expiryMonth" id="expiryMonth">
+        <br>
+
+        <label for="expiryMonth">Expiry</label>
+        <select style="margin-left: 15px;" name="expiryMonth" id="expiryMonth">
 
             <option value="01">01</option>
             <option value="02">02</option>
@@ -241,6 +242,9 @@
             <option value="24">24</option>
 
         </select>
+        <input type="text" style="width: 60px;" id="ccNumber" name="cvcCode" placeholder="CVC" required><br>
+
+
 
  
     </div>
