Checkout UI Fixed up

--- a/index.html
+++ b/index.html
@@ -210,12 +210,12 @@
 
 
     <label for="Payment Method"><pre>Payment Method</pre></label>
-        <input type="text" style="margin-left: 75px;" id="ccNumber" name="ccNumber" placeholder="Credit Card Number" required>
+        <input type="text" style="margin-left: 0px; width:186px;" id="ccNumber" name="ccNumber" placeholder="Credit Card Number" required>
 
         <br>
 
         <label for="expiryMonth">Expiry</label>
-        <select style="margin-left: 15px;" name="expiryMonth" id="expiryMonth">
+        <select name="expiryMonth" id="expiryMonth">
 
             <option value="01">01</option>
             <option value="02">02</option>
@@ -242,7 +242,7 @@
             <option value="24">24</option>
 
         </select>
-        <input type="text" style="width: 60px;" id="ccNumber" name="cvcCode" placeholder="CVC" required><br>
+        <input type="text" style="width: 40px;" id="ccNumber" name="cvcCode" placeholder="CVC" required><br>
 
 
 
