--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <label for="pass"><b>Password:</b></label><br>
             <input class = "login" type="password" id="pass" name="pass" placeholder="Enter Password" required><br>
 
-            <button class = "headerButton" onclick="document.getElementById('loginSucess').style.display='block';">Log In</button>
+            <button class = "headerButton" >Log In</button>
             <button class = "cancelButton" onclick="document.getElementById('login').style.display='none';">Cancel</button>
         </div>
         </div>
