--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 
     <div class="cart1">
         <h1 style="text-align: center;">Order Summary</h1>
-        <div>
-        <ul id="CartList">
-        </ul>
-    </div>
+            <div class = "CartScroller">
+                <ul id="CartList">
+                </ul>
+            </div>
 
 
 
