Fixed Signin bug

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <input class = "login" type="password" id="confpass" name="confpass" placeholder="********" required><br>
 
 
-            <button class = "headerButton" onclick="document.getElementById('signupSucess').style.display='block';" >Sign Up</button>
+            <button class = "headerButton" >Sign Up</button>
             <button class = "cancelButton" onclick="document.getElementById('signup').style.display='none';">Cancel</button>
         </div>
         </div>
