--- a/index.html
+++ b/index.html
@@ -249,9 +249,14 @@
             <button class = "headerButton" >Sign Up</button>
             <button class = "cancelButton" onclick="document.getElementById('signup').style.display='none';">Cancel</button>
         </div>
-        </div>
     </form>
+    <script>
+        if ( window.history.replaceState ) {  // this will prevent form resubmission requests!
+            window.history.replaceState( null, null, window.location.href );
+        }
+    </script>
 </div>
+
 
 <div id="signupSucess" class="modal">
     <div class="modal-content animate" style ="color: rgba(187,134,252);">
