--- a/index.html
+++ b/index.html
@@ -162,12 +162,19 @@
             </select>
             <input type="text" style="width: 40px;" id="ccNumber" name="cvcCode" placeholder="CVC" required><br>
             
-    </div>
-    <div class = "footerCart" class="cart2">
-        <button class = "cancelButton" onclick="document.getElementById('cart').style.display='none';">Cancel</button>
-        <button class = "acceptButton">Process Payment</button>
+
+                <div class = "footerCart" class="cart2">
+                    <button class = "cancelButton" onclick="document.getElementById('cart').style.display='none';">Cancel</button>
+                    <button class = "acceptButton">Process Payment</button>
+
+                 </div>
+
+
+            </form>
+
 
     </div>
+
 </div>
 
 
