--- a/index.html
+++ b/index.html
@@ -97,12 +97,11 @@
 </div>
 
 
-<!--CART SECTION.  CONSIDER MAKING IT GRAPH BASED? NOT SURE HOW IT WORKS FOR MODAL.-->
-<div id="cart" class="modal grid-cart">
+<div id="cart" class="modal animate grid-cart">
     <div class="cartHeader">
         <h1 style="text-align:center;font-size:60px;">Your Order</h1>
     </div>
-    <div class="cart1">
+    <div class="cart1" style="  background-color: rgb(25, 25, 25);">
         <h1 style="text-align: center; font-size:50px;">Order Summary</h1>
             <div class = "CartScroller">
                 <ul id="CartList">
@@ -111,10 +110,10 @@
         <h1 style="float:right; color:white;" id="TotalCost">Total Cost: </h1>
     </div>
 
-    <div class="cart2" >
+    <div class="cart2" style="background-color: rgb(25, 25, 25);" >
         <h1>Checkout</h1>
 
-            <form method="post" onsubmit="let testVal = []; localStorage.setItem('cartContents', JSON.stringify(testVal));" >
+         <form method="post" onsubmit="let testVal = []; localStorage.setItem('cartContents', JSON.stringify(testVal));" >
 
             <label for="Delivery Address">Delivery Address<br></label>
             <input type="text" id="fname" name="fname" placeholder="First Name" required>
@@ -152,6 +151,7 @@
                 <option value="11">11</option>
                 <option value="12">12</option>
             </select>
+
             <label for="expiryYear"></label>
             <select name="expiryYear" id="expiryYear">
                 <option value="20">20</option>
@@ -161,16 +161,14 @@
                 <option value="24">24</option>
             </select>
             <input type="text" style="width: 40px;" id="ccNumber" name="cvcCode" placeholder="CVC" required><br>
-            
 
-                <div class = "footerCart" class="cart2">
-                    <button class = "cancelButton" onclick="document.getElementById('cart').style.display='none';">Cancel</button>
-                    <button class = "acceptButton">Process Payment</button>
+            <div class = "footerCart" class="cart2">
+                <button class = "cancelButton" onclick="document.getElementById('cart').style.display='none';">Cancel</button>
+                <button class = "acceptButton">Process Payment</button>
 
-                 </div>
+            </div>
 
-
-            </form>
+         </form>
 
     </div>
 
@@ -198,16 +196,6 @@
     </form>
 </div>
 
-<div id="loginSucess" class="modal">
-    <div class="modal-content animate" style ="color: rgba(187,134,252);">
-        <h1 style="text-align:center">Welcome to FoodGram!</h1>
-        <p>You have been successfully logged in.</p><br>
-        <p>Enjoy your delicious food, and don't forget to use our special's for you: MilkTheCow.</p><br>
-        <p>You can close this window now.</p><br>
-        <button class = "cancelButton" onclick="document.getElementById('loginSucess').style.display='none'; document.getElementById('login').style.display='none';">Close</button>
-    </div>
-    </div>
-</div>
 
 <div id="signup" class="modal">
     <form class="modal-content animate" method="post">
@@ -241,18 +229,7 @@
 </div>
 
 
-<div id="signupSucess" class="modal">
-    <div class="modal-content animate" style ="color: rgba(187,134,252);">
-        <h1 style="text-align:center;">Welcome to FoodGram!</h1>
-        <p>Your account has been created successfully.</p><br>
-        <p>You can close this window and login now.</p><br>
-        <button class = "cancelButton" onclick="document.getElementById('signupSucess').style.display='none'; document.getElementById('signup').style.display='none';">Close</button>
-    </div>
-</div>
-
-
 <!-- <button class = "headerButton" onclick="document.getElementById('contact').style.display='block';" >Contact Us</button> -->
-
 
 
 <div id="foodPopup" class="modal2">
