--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
 	  Matthias Penner 							pennerm2@myumanitoba.ca
 	  Paul Granelli 							umgranel@myumanitoba.ca
 	  Ryan Campbell 							campb169@myumanitoba.ca</pre><br>
-                <button class = "cancelButton" onclick="document.getElementById('contact').style.display='none';">Close</button>
+                <button type = "button" class = "cancelButton" onclick="document.getElementById('contact').style.display='none';">Close</button>
             </div>
         </div>
 
         <div class="footer">
             <!-- <button class = "headerButton" onclick="document.getElementById('contact').style.display='block';" >Contact Us</button> -->
-            <button class = "headerButton" onclick="document.getElementById('contact').style.display='block';" >Contact Us</button>
+            <button type = "button" class = "headerButton" onclick="document.getElementById('contact').style.display='block';" >Contact Us</button>
         </div>
 
     </div>
@@ -163,8 +163,8 @@
             <input type="text" style="width: 40px;" id="ccNumber" name="cvcCode" placeholder="CVC" required><br>
 
             <div class = "footerCart" class="cart2">
-                <button class = "cancelButton" onclick="document.getElementById('cart').style.display='none';">Cancel</button>
-                <button class = "acceptButton">Process Payment</button>
+                <button  type  = "button" class = "cancelButton" onclick="document.getElementById('cart').style.display='none';">Cancel</button>
+                <button  type = "button" class = "acceptButton">Process Payment</button>
 
             </div>
 
@@ -189,8 +189,8 @@
             <label for="pass"><b>Password:</b></label><br>
             <input class = "login" type="password" id="pass" name="pass" placeholder="Enter Password" required><br>
 
-            <button class = "headerButton" >Log In</button>
-            <button class = "cancelButton" onclick="document.getElementById('login').style.display='none';">Cancel</button>
+            <button type="button" class = "headerButton" >Log In</button>
+            <button type="button" class = "cancelButton" onclick="document.getElementById('login').style.display='none';">Cancel</button>
         </div>
         </div>
     </form>
@@ -221,8 +221,8 @@
             <input class = "login" type="password" id="confpass" name="confpass" placeholder="********" required><br>
 
 
-            <button class = "headerButton" >Sign Up</button>
-            <button class = "cancelButton" onclick="document.getElementById('signup').style.display='none';">Cancel</button>
+            <button type="button" class = "headerButton" >Sign Up</button>
+            <button type="button" class = "cancelButton" onclick="document.getElementById('signup').style.display='none';">Cancel</button>
         </div>
     </form>
 
