removed animation cart

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 </div>
 
 
-<div id="cart" class="modal animate grid-cart">
+<div id="cart" class="modal grid-cart">
     <div class="cartHeader">
         <h1 style="text-align:center;font-size:60px;">Your Order</h1>
     </div>
