--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
             <input type="text" style="width: 40px;" id="ccNumber" name="cvcCode" placeholder="CVC" required><br>
 
             <div class = "footerCart" class="cart2">
-                <button  type  = "button" class = "cancelButton" onclick="document.getElementById('cart').style.display='none';">Cancel</button>
-                <button  type = "button" class = "acceptButton">Process Payment</button>
+                <button  class = "cancelButton" onclick="document.getElementById('cart').style.display='none';">Cancel</button>
+                <button  class = "acceptButton">Process Payment</button>
 
             </div>
 
@@ -196,8 +196,8 @@
                 <label for="pass"><b>Password:</b></label><br>
                 <input class = "login" type="password" id="pass" name="pass" placeholder="Enter Password" required><br>
 
-                <button type="button" class = "headerButton" >Log In</button>
-                <button type="button" class = "cancelButton" onclick="document.getElementById('login').style.display='none';">Cancel</button>
+                <button class = "headerButton" >Log In</button>
+                <button class = "cancelButton" onclick="document.getElementById('login').style.display='none';">Cancel</button>
 
             </ul>
         
@@ -231,8 +231,8 @@
                 <input class = "login" type="password" id="confpass" name="confpass" placeholder="********" required><br>
 
 
-                <button type="button" class = "headerButton" >Sign Up</button>
-                <button type="button" class = "cancelButton" onclick="document.getElementById('signup').style.display='none';">Cancel</button>
+                <button class = "headerButton" >Sign Up</button>
+                <button class = "cancelButton" onclick="document.getElementById('signup').style.display='none';">Cancel</button>
 
 
 
