--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <button type = "button" class = "headerButton" onclick="document.getElementById('contact').style.display='block';" >Contact Us</button>
         </div>
         <script>
-            if ( window.history.replaceState ) {
+            if ( window.history.replaceState ) { //stop pop ups
                 window.history.replaceState( null, null, window.location.href );
             }
         </script>
