--- a/index.html
+++ b/index.html
@@ -259,9 +259,28 @@
         <h2 id="FoodDesc">Here is the description</h2>
         <div id="IngredientList"></div>
         <button id="AddToCart" class = "headerButton3" onclick = "addToCart() ">Add To Cart</button>
-        <button id="AddReview" class = "headerButton4">Add To Reviews</button>
+        <button id="AddReview" class = "headerButton4"  onclick = "document.getElementById('reviewPopup').style.display='block'">Add To Reviews</button>
     </div>
 </div>
+
+
+<div id="reviewPopup" class="modal3">
+    <div class="modal-content3">
+        <div>
+            <span>
+                <button style = "width:50px;" id = "closeReviewPage" class = "headerButton2" onclick="document.getElementById('reviewPopup').style.display='none';">X</button>
+            </span>
+            <h1 id="ReviewTag" style="color:white;text-align:center;margin:0;">Add Review</h1>
+        </div>
+        <p id="FoodDesc2"  style="text-align:left;" >Enter your review for your recipe. You can change your review later in the profile page (not implemented).</p>
+        <br>
+        <p style="text-align:left;float:left;">I give my recipe a </p>
+        <input type="number" id="reviewRating" name="quantity" min="1" max="5" style="display: inline-block;float:left;margin-top:17px;margin-left: 10px; margin-right:10px;">
+        <p style="text-align:left;"> out of 5 </p>
+
+    </div>
+</div>
+
 
 <script>
     document.getElementById('closePopupPage').onclick = function() {
@@ -272,6 +291,9 @@
         if (event.target === document.getElementById("foodPopup")) {
             hidePopUp();
             //document.getElementById("foodPopup").style.display = "none";
+        }
+        if (event.target === document.getElementById("reviewPopup")) {
+            document.getElementById("reviewPopup").style.display = "none";
         }
         if(event.target.classList.contains("checkItem")){
             event.target.checked = !event.target.checked;
