--- a/index.html
+++ b/index.html
@@ -277,6 +277,8 @@
         <p style="text-align:left;float:left;">I give my recipe a </p>
         <input type="number" id="reviewRating" name="quantity" min="1" max="5" style="display: inline-block;float:left;margin-top:17px;margin-left: 10px; margin-right:10px;">
         <p style="text-align:left;"> out of 5 </p>
+        <button id="AddAReview" class = "headerButton3" style="margin-top:10%;" onclick = "" >Add Review</button>
+        <button id="CancelReview" class = "headerButton3"  style="margin-top:10%;background-color:red;" onclick = "document.getElementById('reviewPopup').style.display='none'">Cancel</button>
 
     </div>
 </div>
