Fixed cart errors

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button class = "headerButton left" onclick="document.getElementById('signup').style.display='inline'"> Sign Up </button>
         <button class = "headerButton left" onclick="document.getElementById('login').style.display='inline'"> Log In </button>
         <img id = "logo" src="logo1.png">
-        <button class = "headerButton right" id = "checkoutButton" onclick = "document.getElementById('checkoutDropDownModal').style.display='block';"> <i class="material-icons">add_shopping_cart</i> Cart
+        <button class = "headerButton right" id = "checkoutButton"> <i class="material-icons">add_shopping_cart</i> Cart
         </button>
         <form>
             <input id = "searchBar" type="text" name="search">
