fixed tiny dot beside login

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="topHeader" id= "headerButtons">  <!-- top header for logo and top buttons. -->
         <span id = "signUpButton"><button class = "headerButton left" onclick="document.getElementById('signup').style.display='inline'"> Sign Up </button></span>
         <span id = "loginButton"><button class = "headerButton left" onclick="document.getElementById('login').style.display='inline'"> Log In </button></span>
-        <button id = "usernameButton" class = "headerButton left"> </button>
+        <button id = "usernameButton" style="display: none" class = "headerButton left"> </button>
         <img id = "logo" src="logo1.png">
         <button class = "headerButton right" id = "checkoutButton" onclick = "document.getElementById('checkoutDropDownModal').style.display='block';"> <i class="material-icons">add_shopping_cart</i> Cart
         </button>
