updated signup button

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 <input class = "login" type="password" id="confpass" name="confpass" placeholder="********" required><br>
 
 
-                <button class = "headerButton" >Sign Up</button>
+                <button type = "button" class = "headerButton" onclick= "signUpAction()";>Sign Up</button>
                 <button class = "cancelButton" onclick="document.getElementById('signup').style.display='none';">Cancel</button>
             </ul>
         </div>
