add your own reviews

--- a/index.html
+++ b/index.html
@@ -198,9 +198,7 @@
 
                 <button class = "headerButton" >Log In</button>
                 <button class = "cancelButton" onclick="document.getElementById('login').style.display='none';">Cancel</button>
-
             </ul>
-        
         </div>
     </form>
 </div>
@@ -233,12 +231,7 @@
 
                 <button class = "headerButton" >Sign Up</button>
                 <button class = "cancelButton" onclick="document.getElementById('signup').style.display='none';">Cancel</button>
-
-
-
             </ul>
-
-           
         </div>
     </form>
 
@@ -259,9 +252,7 @@
         <h2 id="FoodDesc">Here is the description</h2>
         <div id="IngredientList"></div>
         <button id="AddToCart" class = "headerButton3" onclick = "addToCart() ">Add To Cart</button>
-<<<<<<< Updated upstream
-        <button id="AddReview" class = "headerButton4">Add To Reviews</button>
-=======
+
         <button id="AddReview" class = "headerButton4"  onclick = "document.getElementById('reviewPopup').style.display='block'">Add To Reviews</button>
     </div>
 </div>
@@ -276,7 +267,7 @@
             <h1 id="ReviewTag" style="color:white;text-align:center;margin:0;">Add Review</h1>
         </div>
 
-            <form method="post">
+
 
         <p id="FoodDesc2"  style="text-align:left;" >Enter your review for your recipe. You can change your review later in the profile page (not implemented).</p>
         <br>
@@ -285,11 +276,9 @@
         <input type="number" id="reviewRating" name="quantity" min="1" max="5" value = "" required style="display: inline-block;margin-top:17px;margin-left: 10px; margin-right:10px;">
 
         out of 5 </p>
+        <button id="AddAReview" class = "headerButton3"  onclick = "addReviewThing();" style="margin-top:10%;">Add Review</button>
+        <button id="CancelReview" class = "headerButton3"  style="margin-top:10%;background-color:red;">Cancel</button>
 
-        <button id="AddAReview" class = "headerButton3" style="margin-top:10%;">Add Review</button>
-        <button id="CancelReview" class = "headerButton3"  style="margin-top:10%;background-color:red;" onclick = "document.getElementById('reviewPopup').style.display='none'">Cancel</button>
-        </form>
->>>>>>> Stashed changes
     </div>
 </div>
 
