--- a/index.html
+++ b/index.html
@@ -101,14 +101,16 @@
 <div id="cart" class="modal grid-cart">
     <div class="cartHeader">
         <h1 style="text-align:center;font-size:60px;">Your Order</h1>
+
     </div>
     <div class="cart1">
         <h1 style="text-align: center; font-size:50px;">Order Summary</h1>
             <div class = "CartScroller">
                 <ul id="CartList">
                 </ul>
+                <footer style="float:right; font-size:24px; color:white;"  id="TotalCost">Total Cost: </footer>
             </div>
-        <h1 style="float:right; color:white;" id="TotalCost">Total Cost: </h1>
+
     </div>
 
     <div class="cart2" >
@@ -232,9 +234,8 @@
             <label for="confpass"><b>Confirm Password:</b></label><br>
             <input class = "login" type="password" id="confpass" name="confpass" placeholder="********" required><br>
 
-
-            <button class = "headerButton" >Sign Up</button>
             <button class = "cancelButton" onclick="document.getElementById('signup').style.display='none';">Cancel</button>
+            <button class = "headerButton" input = "submit">Sign Up</button>
         </div>
     </form>
 
