formatted total in cart

--- a/index.html
+++ b/index.html
@@ -110,8 +110,9 @@
             <div class = "CartScroller">
                 <ul id="CartList">
                 </ul>
+                <footer style="float:right; font-size: :24px; color:white;" id="TotalCost">Total Cost: </footer>
             </div>
-        <h1 style="float:right; color:white;" id="TotalCost">Total Cost: </h1>
+
     </div>
 
     <div class="cart2" style="background-color: rgb(25, 25, 25);" >
