--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
             <h1 style="text-align:center">Welcome to FoodGram!</h1>
 
             <ul style="margin-left: 35%">
+                <form>
                 <label for="fnameS"><b>First Name:</b></label><br>
                 <input class = "login" type="text" id="fnameS" name="fnameS" placeholder="Your First Name" autofocus required><br>
 
@@ -227,9 +228,9 @@
                 <label for="confpass"><b>Confirm Password:</b></label><br>
                 <input class = "login" type="password" id="confpass" name="confpass" placeholder="********" required><br>
 
-
-                <button type = "button" class = "headerButton" onclick= "signUpAction();">Sign Up</button>
                 <button class = "cancelButton" onclick="document.getElementById('signup').style.display='none';">Cancel</button>
+                    <button type = "button" class = "headerButton" type="submit" onclick= "signUpAction();">Sign Up</button>
+                </form>
             </ul>
         </div>
     </form>
