--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <ul id="CartList">
                 </ul>
             </div>
-        <h1 style="float:right; color:white;" id="TotalCost">Total Cost: </h1>
+        <footer style="float:right;font: bold; font-size: 24px; color:white;" id="TotalCost">Total Cost: </footer>
     </div>
 
     <div class="cart2" style="background-color: rgb(25, 25, 25);" >
